# AddBoost.cmake

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddBoost.cmake.in  getCPM.cmake
cmake/AddBoost.cmake/: AddBoost.cmakeConfig.cmake.in
patches/boost/1.80.0.beta1/: boost_cmake_enable_install_rules_for_add_subdirectory_case.patch
patches/boost/1.84.0/: boost_cmake_enable_install_rules_for_add_subdirectory_case.patch
